API to move devices between products and organizations (#1299)
